--- a/env.env
+++ b/env.env
@@ -1,7 +1,7 @@
 PORT=3000
 
 # MongoDB
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/dbname?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://fareshazem770:<db_password>@cluster0.kchwuhx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Secret
 JWT_SECRET=supersecretkey_change_this
