--- a/package.json
+++ b/package.json
@@ -1,2 +1,20 @@
-.env
-node_modules
+{
+  "name": "iot-backend",
+  "version": "1.0.0",
+  "description": "Backend for IoT system",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "Your Name",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "nodemailer": "^6.9.3",
+    "jsonwebtoken": "^9.0.0"
+  }
+}
