--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for IoT system",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Your Name",
