--- a/env.env
+++ b/env.env
@@ -1,7 +1,7 @@
 PORT=3000
 
 # MongoDB
-MONGO_URI=mongodb+srv://fareshazem770:<db_password>@cluster0.kchwuhx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://fareshazem770:B9pLNZW.LmV!Tf7@cluster0.kchwuhx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Secret
 JWT_SECRET=supersecretkey_change_this
@@ -10,14 +10,12 @@ JWT_SECRET=supersecretkey_change_this
 DEVICE_API_KEYS=api_key_1,api_key_2,api_key_3
 
 # Gmail Alerts (يفضل تستخدم Gmail App Password)
-MAIL_USER=yourgmail@gmail.com
-MAIL_PASS=your_gmail_app_password
-
+MAIL_USER=iottitans156@gmail.com
+MAIL_PASS=+201501553145anas
 # Alert Admin Email
-ADMIN_EMAIL=admin@gmail.com
-
+ADMIN_EMAIL=iottitans156@gmail.com
 # Internal AI Service Key (اختياري لو عندك Integration داخلي)
 INTERNAL_AI_API_KEY=ai_service_secret_key
 
 # CORS (اختياري، لو هتحدد origins معينة)
-# CORS_ORIGIN=http://localhost:3000,http://yourfrontend.com
+# CORS_ORIGIN=http://localhost:3000,http://smart-farm2.vercel.app
